Update comments, update typha affinity if clause for clarity

--- a/config/crd/bases/operator.tigera.io_installations.yaml
+++ b/config/crd/bases/operator.tigera.io_installations.yaml
@@ -597,9 +597,12 @@ spec:
                           fallback to another affinity rules with this setting. This
                           may cause networking disruption or even catastrophic failure!
                           PreferredDuringSchedulingIgnoredDuringExecution should be
-                          a default choice if there are no well understood specific
-                          conditions exist in your environment. NOTE: RequiredDuringSchedulingIgnoredDuringExecution
-                          is set by default for AKS nodes, to avoid scheduling Typhas
+                          used for affinity unless there is a specific well understood
+                          reason to use RequiredDuringSchedulingIgnoredDuringExecution
+                          and you can guarantee that the RequiredDuringSchedulingIgnoredDuringExecution
+                          will always have sufficient nodes to satisfy the requirement.
+                          NOTE: RequiredDuringSchedulingIgnoredDuringExecution is
+                          set by default for AKS nodes, to avoid scheduling Typhas
                           on virtual-nodes. If the affinity requirements specified
                           by this field cease to be met at some point during pod execution
                           (e.g. due to an update), the system may or may not try to
@@ -1286,14 +1289,17 @@ spec:
                               the node. There is no fallback to another affinity rules
                               with this setting. This may cause networking disruption
                               or even catastrophic failure! PreferredDuringSchedulingIgnoredDuringExecution
-                              should be a default choice if there are no well understood
-                              specific conditions exist in your environment. NOTE:
-                              RequiredDuringSchedulingIgnoredDuringExecution is set
-                              by default for AKS nodes, to avoid scheduling Typhas
-                              on virtual-nodes. If the affinity requirements specified
-                              by this field cease to be met at some point during pod
-                              execution (e.g. due to an update), the system may or
-                              may not try to eventually evict the pod from its node.'
+                              should be used for affinity unless there is a specific
+                              well understood reason to use RequiredDuringSchedulingIgnoredDuringExecution
+                              and you can guarantee that the RequiredDuringSchedulingIgnoredDuringExecution
+                              will always have sufficient nodes to satisfy the requirement.
+                              NOTE: RequiredDuringSchedulingIgnoredDuringExecution
+                              is set by default for AKS nodes, to avoid scheduling
+                              Typhas on virtual-nodes. If the affinity requirements
+                              specified by this field cease to be met at some point
+                              during pod execution (e.g. due to an update), the system
+                              may or may not try to eventually evict the pod from
+                              its node.'
                             properties:
                               nodeSelectorTerms:
                                 description: Required. A list of node selector terms.
