--- a/config/crd/bases/operator.tigera.io_installations.yaml
+++ b/config/crd/bases/operator.tigera.io_installations.yaml
@@ -405,7 +405,9 @@ spec:
                 description: "ImagePrefix allows for the prefix part of an image to
                   be specified. If specified then the given value will be used as
                   a prefix on each image. If not specified or empty, no prefix will
-                  be used. \n Image format:    `<registry>/<imagePath>/<imagePrefix><imageName>:<image-tag>`
+                  be used. A special case value, UseDefault, is supported to explicitly
+                  specify the default image prefix will be used for each image. \n
+                  Image format:    `<registry>/<imagePath>/<imagePrefix><imageName>:<image-tag>`
                   \n This option allows configuring the `<imagePrefix>` portion of
                   the above format."
                 type: string
@@ -1099,7 +1101,9 @@ spec:
                     description: "ImagePrefix allows for the prefix part of an image
                       to be specified. If specified then the given value will be used
                       as a prefix on each image. If not specified or empty, no prefix
-                      will be used. \n Image format:    `<registry>/<imagePath>/<imagePrefix><imageName>:<image-tag>`
+                      will be used. A special case value, UseDefault, is supported
+                      to explicitly specify the default image prefix will be used
+                      for each image. \n Image format:    `<registry>/<imagePath>/<imagePrefix><imageName>:<image-tag>`
                       \n This option allows configuring the `<imagePrefix>` portion
                       of the above format."
                     type: string
