Implement Operator logic to install ES Gateway

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -85,3 +85,6 @@ components:
   elasticsearch-metrics:
     image: tigera/elasticsearch-metrics
     version: master
+  es-gateway:
+    image: tigera/es-gateway
+    version: master
