Refactor Prometheus watches in Monitor controller
A separate go routine is added in the Monitor controller to add watches
for Prometheus related resources only after all necessary CRDs are
applied to the cluster. This should prevent the operator from crashing when
those CRDs don't exits.

--- a/config/crd/bases/operator.tigera.io_monitors.yaml
+++ b/config/crd/bases/operator.tigera.io_monitors.yaml
@@ -38,7 +38,7 @@ spec:
             description: MonitorSpec defines the desired state of Tigera monitor.
             type: object
           status:
-            description: MonitorStatus defines the observed state of Tigear monitor.
+            description: MonitorStatus defines the observed state of Tigera monitor.
             properties:
               state:
                 description: State provides user-readable status.
