Adding packetcapture api container for tigera-manager
PacketCapture Download API exposes the API to retrieve pcap files generated by a PacketCapture. This enables personas
like DevOps or Platform Engineers to retrieve files backed by a namespace RBAC.

PacketCapture API is a service that is deployed as container part of tigera-manager deployment. By default, it is
installed by Tigera operator. This service will only be deployed only for Standalone and Management clusters, and requests
will be routed to the appropriate managed clusters.

Voltron container has route defined for any requests that starts with `/packet-capture/` prefix. It will strip away that
prefix and forward it to the container where this service resides.

* [COSMETIC] Rename methods and unnecessary string

* [CODE REVIEW] Add resources

* [CODE REVIEW] Update names and comments

* [CODE REVIEW] Use a Role/RoleBinding

* Fix! make validate-gen-files

* Fix! Formatting

* Fix! Tests

* Adding comments

* Remove duble permissions and add authenticationreviews permissions

* Fix! Add misssing permissions

* [CODE REVIEW] Limit listing pods to tigera-fluentd

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -90,3 +90,6 @@ components:
   alertmanager:
     image: tigera/alertmanager
     version: v0.20.0
+  packetcapture:
+    image: tigera/packetcapture-api
+    version: master
