--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -30,6 +30,9 @@ components:
   es-proxy:
     image: tigera/es-proxy
     version: v3.7.0
+  es-gateway:
+    image: tigera/es-gateway
+    version: master
   eck-kibana:
     version: 7.10.1
   dex:
