Adding initial VPP support

--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -12,3 +12,8 @@ components:
     version: master
   calico/apiserver:
     version: master
+  calicovpp/vpp:
+    version: latest
+  calicovpp/agent:
+    version: latest
+
