--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -1,14 +1,14 @@
-title: master
+title: v3.19.1
 components:
   typha:
-    version: master
+    version: v3.19.1
   calico/node:
-    version: master
+    version: v3.19.1
   calico/cni:
-    version: master
+    version: v3.19.1
   calico/kube-controllers:
-    version: master
+    version: v3.19.1
   flexvol:
-    version: master
+    version: v3.19.1
   calico/apiserver:
-    version: master
+    version: v3.19.1
