feat(prometheus-service): adding prometheus-service deployment to be managed by operator
feat(prometheus-service): adding skeleton code for rendering prometheus service

feat(monitor): add prometheus service to be part of Monitor's reconcile loop

feat(render/prometheus_service): add EKS check for service deployments

fix(prometheus_service): update  prometheus service images versions and source  for testing

fix(prometheus_service): nil installation spec

feat(monitor): attach creating the prometheus service resources in monitor controller

fix(prometheus_service): cleanup + add test registry for pulling temp prometheus service image

fix(monitor_test): accoutn for prometheus-http-service

feat(prometheus_service_port): configure prometheus service port

feat(prometheus_service): hostnetworked if eks + calico cni

feat(prometheus_service): set hostnetworked and dnsPolicy + fixes around setting prometheusServicePort

feat(prometheus_service): UTs

feat(ut/prometheus_service): add check against expected resource

fix(prometheus_service): pulling secrete to tigera-prometheus ns

feat(pometheus_service): add licenses

feat(monitor_types): add description for PrometheusServiceListenPort

fix(monitor_controller): compile issue from field name

comment(porometheus_service): commenting on hostNetwork

fix(prometheus_service): typo on prometheus endpoint url name

fix(enterprise) run make gen-versions

fix(versions): official prometheus service image provisioning

fix(monitor): change of prometheus http  svc name to prometheus api

fix(prometheus-service): typos + comments

feat(monitor): update prometheus-api name

fix tests

fix(prometheus_api): name changes from service

test(prometheus_api): fix name change on test

feat(prometheus_api): add psp

feat(prometheus_api): switch to reading prometheus service port configuration from configmap

fix(prometheusServiceListenPort): removed from monitorspecs

fix(api): make gen files

test(monitor_controller): creating monitor con

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -85,6 +85,9 @@ components:
   packetcapture-api:
     image: tigera/packetcapture-api
     version: master
+  tigera-prometheus-service:
+    image: tigera/prometheus-service
+    version: master
   # The components below are third-party images that have been retagged under
   # quay.io/tigera so all enterprise images come from the same repository and org.
   elasticsearch-operator:
