--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -82,8 +82,9 @@ components:
   packetcapture-api:
     image: tigera/packetcapture-api
     version: master
-  prometheus-service:
+  tigera-prometheus-service:
     image: tigera-dev/edbert/prometheus-service
+    version: latest
   # The components below are third-party images that have been retagged under
   # quay.io/tigera so all enterprise images come from the same repository and org.
   elasticsearch-operator:
