--- a/config/crd/bases/operator.tigera.io_monitors.yaml
+++ b/config/crd/bases/operator.tigera.io_monitors.yaml
@@ -5,7 +5,6 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
-  creationTimestamp: null
   name: monitors.operator.tigera.io
 spec:
   group: operator.tigera.io
@@ -36,6 +35,10 @@ spec:
             type: object
           spec:
             description: MonitorSpec defines the desired state of Tigera monitor.
+            properties:
+              prometheusServicePort:
+                description: PrometheusServicePort defaults to 9090
+                type: integer
             type: object
           status:
             description: MonitorStatus defines the observed state of Tigera monitor.
