--- a/config/crd/bases/operator.tigera.io_monitors.yaml
+++ b/config/crd/bases/operator.tigera.io_monitors.yaml
@@ -36,8 +36,14 @@ spec:
           spec:
             description: MonitorSpec defines the desired state of Tigera monitor.
             properties:
-              prometheusServicePort:
-                description: PrometheusServicePort defaults to 9090
+              prometheusServiceListenPort:
+                description: PrometheusServiceListenPort defines the port that tigera-prometheus-service
+                  pod listens to and the TargetPort of calico-node-prometheus service.
+                  If not set it defaults to port 9090. In the scenario that the cluster
+                  is hosted on EKS and using Calico as it's CNI, tigera-prometheu-service
+                  will be HostNetwoked.  Configure this, if the default port value
+                  conflicts with any other ports currently used in the cluster's node
+                  network namespace.
                 type: integer
             type: object
           status:
