--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -86,8 +86,8 @@ components:
     image: tigera/packetcapture-api
     version: master
   tigera-prometheus-service:
-    image: tigera-dev/edbert/prometheus-service
-    version: latest
+    image: tigera/prometheus-service
+    version: master
   # The components below are third-party images that have been retagged under
   # quay.io/tigera so all enterprise images come from the same repository and org.
   elasticsearch-operator:
