--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -1,90 +1,90 @@
-title: master
+title: v3.8.1
 components:
   cnx-manager:
     image: tigera/cnx-manager
-    version: master
+    version: v3.8.1
   voltron:
     image: tigera/voltron
-    version: master
+    version: v3.8.1
   cnx-apiserver:
     image: tigera/cnx-apiserver
-    version: master
+    version: v3.8.1
   cnx-queryserver:
     image: tigera/cnx-queryserver
-    version: master
+    version: v3.8.1
   cnx-kube-controllers:
     image: tigera/kube-controllers
-    version: master
+    version: v3.8.1
   typha:
     image: tigera/typha
-    version: master
+    version: v3.8.1
   cnx-node:
     image: tigera/cnx-node
-    version: master
+    version: v3.8.1
   fluentd:
     image: tigera/fluentd
-    version: master
+    version: v3.8.1
   fluentd-windows:
     image: tigera/fluentd-windows
-    version: master
+    version: v3.8.1
   es-proxy:
     image: tigera/es-proxy
-    version: master
+    version: v3.8.1
   es-gateway:
     image: tigera/es-gateway
-    version: master
+    version: v3.8.1
   eck-kibana:
     version: 7.10.1
   dex:
     image: tigera/dex
-    version: master
+    version: v3.8.1
   kibana:
     image: tigera/kibana
-    version: master
+    version: v3.8.1
   eck-elasticsearch:
     version: 7.10.1
   elasticsearch:
     image: tigera/elasticsearch
-    version: master
+    version: v3.8.1
   elastic-tsee-installer:
     image: tigera/intrusion-detection-job-installer
-    version: master
+    version: v3.8.1
   es-curator:
     image: tigera/es-curator
-    version: master
+    version: v3.8.1
   intrusion-detection-controller:
     image: tigera/intrusion-detection-controller
-    version: master
+    version: v3.8.1
   compliance-controller:
     image: tigera/compliance-controller
-    version: master
+    version: v3.8.1
   compliance-reporter:
     image: tigera/compliance-reporter
-    version: master
+    version: v3.8.1
   compliance-snapshotter:
     image: tigera/compliance-snapshotter
-    version: master
+    version: v3.8.1
   compliance-server:
     image: tigera/compliance-server
-    version: master
+    version: v3.8.1
   compliance-benchmarker:
     image: tigera/compliance-benchmarker
-    version: master
+    version: v3.8.1
   guardian:
     image: tigera/guardian
-    version: master
+    version: v3.8.1
   tigera-cni:
     image: tigera/cni
-    version: master
+    version: v3.8.1
   cloud-controllers:
     image: tigera/cloud-controllers
-    version: master
+    version: v3.8.1
   elasticsearch-metrics:
     image: tigera/elasticsearch-metrics
-    version: master
+    version: v3.8.1
   packetcapture-api:
     image: tigera/packetcapture-api
-    version: master
+    version: v3.8.1
   # The components below are third-party images that have been retagged under
   # quay.io/tigera so all enterprise images come from the same repository and org.
   elasticsearch-operator:
