operator changes to add collectProcessPath

--- a/config/crd/bases/operator.tigera.io_logcollectors.yaml
+++ b/config/crd/bases/operator.tigera.io_logcollectors.yaml
@@ -140,6 +140,10 @@ spec:
                     - logTypes
                     type: object
                 type: object
+              collectProcessPath:
+                description: 'Configuration for enabling/disabling process path collection
+                  in flowlogs. Default: Enable Enum=Enable;Disable'
+                type: string
             type: object
           status:
             description: Most recently observed state for Tigera log collection.
