--- a/config/crd/bases/operator.tigera.io_logcollectors.yaml
+++ b/config/crd/bases/operator.tigera.io_logcollectors.yaml
@@ -142,7 +142,7 @@ spec:
                 type: object
               collectProcessPath:
                 description: 'Configuration for enabling/disabling process path collection
-                  in flowlogs. Default: Enable'
+                  in flowlogs. Default: Enabled'
                 enum:
                 - Enabled
                 - Disabled
