Move fillDefaults into Reconcile

--- a/config/crd/bases/operator.tigera.io_logcollectors.yaml
+++ b/config/crd/bases/operator.tigera.io_logcollectors.yaml
@@ -142,7 +142,8 @@ spec:
                 type: object
               collectProcessPath:
                 description: 'Configuration for enabling/disabling process path collection
-                  in flowlogs. Default: Enabled'
+                  in flowlogs. If Enabled, this feature sets hostPID to true in order
+                  to read process cmdline. Default: Enabled'
                 enum:
                 - Enabled
                 - Disabled
