Operator changes for process path collection in flowLogs (#1394)
* operator changes to add collectProcessPath

* changes to make hostPID work with PSP turned on

* set hostPID in psp only if collectprocesspath is enabled

--- a/config/crd/bases/operator.tigera.io_logcollectors.yaml
+++ b/config/crd/bases/operator.tigera.io_logcollectors.yaml
@@ -140,6 +140,14 @@ spec:
                     - logTypes
                     type: object
                 type: object
+              collectProcessPath:
+                description: 'Configuration for enabling/disabling process path collection
+                  in flowlogs. If Enabled, this feature sets hostPID to true in order
+                  to read process cmdline. Default: Enabled'
+                enum:
+                - Enabled
+                - Disabled
+                type: string
             type: object
           status:
             description: Most recently observed state for Tigera log collection.
