--- a/deploy/crds/elastic/beat-crd.yaml
+++ b/deploy/crds/elastic/beat-crd.yaml
@@ -3,43 +3,42 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.4.0
     "helm.sh/hook": "crd-install"
-  creationTimestamp: null
   name: beats.beat.k8s.elastic.co
 spec:
   additionalPrinterColumns:
-    - JSONPath: .status.health
-      name: health
-      type: string
-    - JSONPath: .status.availableNodes
-      description: Available nodes
-      name: available
-      type: integer
-    - JSONPath: .status.expectedNodes
-      description: Expected nodes
-      name: expected
-      type: integer
-    - JSONPath: .spec.type
-      description: Beat type
-      name: type
-      type: string
-    - JSONPath: .spec.version
-      description: Beat version
-      name: version
-      type: string
-    - JSONPath: .metadata.creationTimestamp
-      name: age
-      type: date
+  - JSONPath: .status.health
+    name: health
+    type: string
+  - JSONPath: .status.availableNodes
+    description: Available nodes
+    name: available
+    type: integer
+  - JSONPath: .status.expectedNodes
+    description: Expected nodes
+    name: expected
+    type: integer
+  - JSONPath: .spec.type
+    description: Beat type
+    name: type
+    type: string
+  - JSONPath: .status.version
+    description: Beat version
+    name: version
+    type: string
+  - JSONPath: .metadata.creationTimestamp
+    name: age
+    type: date
   group: beat.k8s.elastic.co
   names:
     categories:
-      - elastic
+    - elastic
     kind: Beat
     listKind: BeatList
     plural: beats
     shortNames:
-      - beat
+    - beat
     singular: beat
   scope: Namespaced
   subresources:
@@ -91,6 +90,54 @@ spec:
                 replicas:
                   format: int32
                   type: integer
+                strategy:
+                  description: DeploymentStrategy describes how to replace existing
+                    pods with new ones.
+                  properties:
+                    rollingUpdate:
+                      description: 'Rolling update config params. Present only if
+                        DeploymentStrategyType = RollingUpdate. --- TODO: Update this
+                        to follow our convention for oneOf, whatever we decide it
+                        to be.'
+                      properties:
+                        maxSurge:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: 'The maximum number of pods that can be scheduled
+                            above the desired number of pods. Value can be an absolute
+                            number (ex: 5) or a percentage of desired pods (ex: 10%).
+                            This can not be 0 if MaxUnavailable is 0. Absolute number
+                            is calculated from percentage by rounding up. Defaults
+                            to 25%. Example: when this is set to 30%, the new ReplicaSet
+                            can be scaled up immediately when the rolling update starts,
+                            such that the total number of old and new pods do not
+                            exceed 130% of desired pods. Once old pods have been killed,
+                            new ReplicaSet can be scaled up further, ensuring that
+                            total number of pods running at any time during the update
+                            is at most 130% of desired pods.'
+                        maxUnavailable:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: 'The maximum number of pods that can be unavailable
+                            during the update. Value can be an absolute number (ex:
+                            5) or a percentage of desired pods (ex: 10%). Absolute
+                            number is calculated from percentage by rounding down.
+                            This can not be 0 if MaxSurge is 0. Defaults to 25%. Example:
+                            when this is set to 30%, the old ReplicaSet can be scaled
+                            down to 70% of desired pods immediately when the rolling
+                            update starts. Once new pods are ready, old ReplicaSet
+                            can be scaled down further, followed by scaling up the
+                            new ReplicaSet, ensuring that the total number of pods
+                            available at all times during the update is at least 70%
+                            of desired pods.'
+                      type: object
+                    type:
+                      description: Type of deployment. Can be "Recreate" or "RollingUpdate".
+                        Default is RollingUpdate.
+                      type: string
+                  type: object
               type: object
             elasticsearchRef:
               description: ElasticsearchRef is a reference to an Elasticsearch cluster
@@ -104,7 +151,7 @@ spec:
                     to the current namespace.
                   type: string
               required:
-                - name
+              - name
               type: object
             image:
               description: Image is the Beat Docker image to deploy. Version and Type
@@ -123,7 +170,7 @@ spec:
                     to the current namespace.
                   type: string
               required:
-                - name
+              - name
               type: object
             secureSettings:
               description: SecureSettings is a list of references to Kubernetes Secrets
@@ -153,14 +200,14 @@ spec:
                             contain any ".." components.
                           type: string
                       required:
-                        - key
+                      - key
                       type: object
                     type: array
                   secretName:
                     description: SecretName is the name of the secret.
                     type: string
                 required:
-                  - secretName
+                - secretName
                 type: object
               type: array
             serviceAccountName:
@@ -181,8 +228,8 @@ spec:
               description: Version of the Beat.
               type: string
           required:
-            - type
-            - version
+          - type
+          - version
           type: object
         status:
           description: BeatStatus defines the observed state of a Beat.
@@ -201,12 +248,17 @@ spec:
             kibanaAssociationStatus:
               description: AssociationStatus is the status of an association resource.
               type: string
+            version:
+              description: 'Version of the stack resource currently running. During
+                version upgrades, multiple versions may run in parallel: this value
+                specifies the lowest version currently running.'
+              type: string
           type: object
   version: v1beta1
   versions:
-    - name: v1beta1
-      served: true
-      storage: true
+  - name: v1beta1
+    served: true
+    storage: true
 status:
   acceptedNames:
     kind: ""
