Add support for DeepPacketInspection

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -88,6 +88,9 @@ components:
   tigera-prometheus-service:
     image: tigera/prometheus-service
     version: master
+  deep-packet-inspection:
+    image: tigera/deep-packet-inspection
+    version: master
   # The components below are third-party images that have been retagged under
   # quay.io/tigera so all enterprise images come from the same repository and org.
   elasticsearch-operator:
