Make CaliEnt core components replica configurable
Make the following Calico Enterprise components deployment replica
configurable:
* tigera-dex/tigera-dex
* tigera-elasticsearch/tigera-secure-es-gateway
* tigera-manager/tigera-manager (standalone cluster only)
* tigera-system/tigera-apiserver

--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -167,6 +167,11 @@ spec:
                       - SelectAccount
                       type: string
                     type: array
+                  replicas:
+                    description: Replicas defines the OIDC provider replicas. It only
+                      applies to OIDCType Dex. Defaults to 1.
+                    format: int32
+                    type: integer
                   requestedScopes:
                     description: 'RequestedScopes is a list of scopes to request from
                       the OIDC provider. If not provided, the following scopes are
