--- a/config/crd/bases/operator.tigera.io_logstorages.yaml
+++ b/config/crd/bases/operator.tigera.io_logstorages.yaml
@@ -94,6 +94,15 @@ spec:
                   the indicated key-value pairs as labels as well as access to the
                   specified StorageClassName.
                 type: object
+              esgateway:
+                description: ESGateway defines the configuration for the ES Gateway.
+                properties:
+                  replicas:
+                    description: Replicas defines how many ES Gateway replicas in
+                      the cluster. Defaults to 2.
+                    format: int32
+                    type: integer
+                type: object
               indices:
                 description: Index defines the configuration for the indices in the
                   Elasticsearch cluster.
