--- a/config/crd/bases/operator.tigera.io_managers.yaml
+++ b/config/crd/bases/operator.tigera.io_managers.yaml
@@ -60,6 +60,11 @@ spec:
                     - OAuth
                     type: string
                 type: object
+              replicas:
+                description: Replicas defines how many Calico Enterprise manager replicas
+                  in the cluster. Defaults to 1.
+                format: int32
+                type: integer
             type: object
           status:
             description: Most recently observed state for the Calico Enterprise manager.
