--- a/config/samples/operator_v1_applicationlayer.yaml
+++ b/config/samples/operator_v1_applicationlayer.yaml
@@ -2,6 +2,4 @@ apiVersion: operator.tigera.io/v1
 kind: ApplicationLayer
 metadata:
   name: applicationlayer-sample
-spec:
-  # Add fields here
-  foo: bar
+spec: {}
