--- a/deploy/crds/elastic/elasticmapsservers.yaml
+++ b/deploy/crds/elastic/elasticmapsservers.yaml
@@ -11,6 +11,8 @@ metadata:
     app.kubernetes.io/version: '1.7.1'
   name: elasticmapsservers.maps.k8s.elastic.co
 spec:
+  # preserveUnknownFields - set to false to pickup udpate to v1/CRD structure 
+  preserveUnknownFields: false
   group: maps.k8s.elastic.co
   names:
     categories:
