--- a/deploy/crds/elastic/kibana-crd.yaml
+++ b/deploy/crds/elastic/kibana-crd.yaml
@@ -11,6 +11,8 @@ metadata:
     app.kubernetes.io/version: '1.7.1'
   name: kibanas.kibana.k8s.elastic.co
 spec:
+  # preserveUnknownFields - set to false to pickup udpate to v1/CRD structure 
+  preserveUnknownFields: false
   group: kibana.k8s.elastic.co
   names:
     categories:
